# health-insurance-sg-server

./: .gitignore  README.md  main.py  policies.json  pyproject.toml  requirements.txt  upload_doc.py  vercel.json
eval/: README.md  eval.py  model_grader.py
eval/tests/: basic.json  convo.json  misc.json  plans.json  premiums.json
llamaqa/: ARCHITECTURE.md  NOTES.md  agent.py
llamaqa/agents/: __init__.py
llamaqa/agents/paperqa/: __init__.py  base.py  fallback.py  parser.py  prompts.py  step.py  suggest.py  utils.py
llamaqa/llms/: __init__.py  embedding_model.py  litellm_model.py  llm_model.py  llm_result.py
llamaqa/reader/: doc.py  parsing_settings.py  reader.py  utils.py
llamaqa/store/: match_chunks.sql  policy_ids.py  store.py  supabase_store.py  utils.py
llamaqa/tools/: convert_premium_csv_to_json.py  dummy_tools.py  gather_evidence.py  generate_response.py  insurance_plans.py  paperqa_tools.py  premiums.csv  premiums.json  premiums_data.py  retrieve_evidence.py  retrieve_policy_plans_and_riders.py  retrieve_premium.py  retrieve_premiums.py  summarize_evidence.py  utils.py
llamaqa/utils/: answer.py  api.py  cache.py  context.py  doc.py  embeddable.py  inner_context.py  logger.py  policies.py  prompts.py  react_agent.py  response.py  stream.py  text.py  utils.py
server/: main.py  server.py  vercel_test.py
